--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
 		]
 	},
 	"dependencies": {
+		"@cloudinary/react": "^1.13.1",
+		"@cloudinary/url-gen": "^1.21.0",
 		"lucide-react": "^0.471.0",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
