integracion de hero

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ DEBUG=TRUE
 # Front-End Variables
 BASENAME=/
 #BACKEND_URL=
+#BACKEND_URL=
+#CLOUDINARY_CLOUD_NAME=
+#CLOUDINARY_API_KEY=
+#CLOUDINARY_API_SECRET=
