--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
 		"@babel/preset-env": "^7.16.4",
 		"@babel/preset-react": "^7.16.0",
 		"@babel/runtime": "^7.16.3",
+		"autoprefixer": "^10.4.20",
 		"babel-eslint": "^10.1.0",
 		"babel-loader": "^8.2.3",
-		"babel-plugin-transform-class-properties": "^6.24.1",
+		"babel-plugin-transform-class-properties": "^6.10.2",
 		"bc-console": "0.0.2",
-		"css-loader": "^6.5.1",
+		"css-loader": "^6.11.0",
 		"dotenv-webpack": "^7.0.3",
 		"envfile": "^6.17.0",
 		"error-overlay-webpack-plugin": "^1.0.0",
@@ -45,13 +46,16 @@
 		"eslint-plugin-react": "^7.27.1",
 		"eslint-webpack-plugin": "^3.1.1",
 		"file-loader": "^6.2.0",
-		"gh-pages": "^3.2.3",
+		"gh-pages": "^6.3.0",
 		"html-loader": "^3.0.1",
 		"html-webpack-plugin": "^5.5.0",
 		"parse-github-url": "^1.0.2",
+		"postcss": "^8.5.1",
+		"postcss-loader": "^8.1.1",
 		"prettier": "^2.5.1",
 		"remote-origin-url": "^2.0.0",
-		"style-loader": "^3.3.1",
+		"style-loader": "^3.3.4",
+		"tailwindcss": "^3.4.17",
 		"webpack": "^5.65.0",
 		"webpack-cli": "^4.9.1",
 		"webpack-dev-server": "^4.6.0",
@@ -75,11 +79,33 @@
 	"dependencies": {
 		"@cloudinary/react": "^1.13.1",
 		"@cloudinary/url-gen": "^1.21.0",
-		"lucide-react": "^0.471.0",
-		"prop-types": "^15.6.1",
-		"react": "^16.8.4",
-		"react-dom": "^16.8.4",
+		"@radix-ui/react-avatar": "^1.1.2",
+		"@radix-ui/react-checkbox": "^1.1.3",
+		"@radix-ui/react-dialog": "^1.1.4",
+		"@radix-ui/react-dropdown-menu": "^2.1.4",
+		"@radix-ui/react-label": "^2.1.1",
+		"@radix-ui/react-popover": "^1.1.4",
+		"@radix-ui/react-select": "^2.1.4",
+		"@radix-ui/react-separator": "^1.1.1",
+		"@radix-ui/react-slot": "^1.1.1",
+		"@radix-ui/react-switch": "^1.1.2",
+		"@radix-ui/react-tabs": "^1.1.2",
+		"@radix-ui/react-toast": "^1.2.4",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
+		"lucide-react": "^0.471.1",
+		"moment": "^2.30.1",
+		"next-themes": "^0.4.4",
+		"prop-types": "^15.8.1",
+		"react": "^16.14.0",
+		"react-big-calendar": "^1.17.1",
+		"react-day-picker": "^9.5.0",
+		"react-dom": "^16.14.0",
 		"react-polyfills": "0.0.1",
-		"react-router-dom": "^6.3.0"
+		"react-router-dom": "^6.3.0",
+		"recharts": "^2.15.0",
+		"tailwind-merge": "^2.6.0",
+		"tailwindcss-animate": "^1.0.7"
 	}
 }
