--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0",
 		"recharts": "^2.15.0",
+		"sweetalert2": "^11.15.10",
 		"tailwind-merge": "^2.6.0",
 		"tailwindcss-animate": "^1.0.7"
 	}
