--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
 	"dependencies": {
 		"@cloudinary/react": "^1.13.1",
 		"@cloudinary/url-gen": "^1.21.0",
+		"@headlessui/react": "^2.2.0",
+		"@heroicons/react": "^2.2.0",
 		"@radix-ui/react-avatar": "^1.1.2",
 		"@radix-ui/react-checkbox": "^1.1.3",
 		"@radix-ui/react-dialog": "^1.1.4",
@@ -102,6 +104,8 @@
 		"react-big-calendar": "^1.17.1",
 		"react-day-picker": "^9.5.0",
 		"react-dom": "^16.14.0",
+		"react-native-feather": "^1.1.2",
+		"react-native-web": "^0.19.13",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0",
 		"recharts": "^2.15.0",
