--- a/package.json
+++ b/package.json
@@ -93,10 +93,14 @@
 		"@radix-ui/react-switch": "^1.1.2",
 		"@radix-ui/react-tabs": "^1.1.2",
 		"@radix-ui/react-toast": "^1.2.4",
+		"@react-navigation/material-top-tabs": "^7.1.0",
+		"@react-navigation/native": "^7.0.14",
+		"buffer": "^6.0.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
 		"lucide-react": "^0.471.2",
+		"lucide-react-native": "^0.473.0",
 		"moment": "^2.30.1",
 		"next-themes": "^0.4.4",
 		"prop-types": "^15.8.1",
@@ -104,8 +108,17 @@
 		"react-big-calendar": "^1.17.1",
 		"react-day-picker": "^9.5.0",
 		"react-dom": "^16.14.0",
+		"react-native": "^0.76.6",
 		"react-native-feather": "^1.1.2",
+		"react-native-gesture-handler": "^2.22.0",
+		"react-native-get-random-values": "^1.11.0",
+		"react-native-reanimated": "^3.16.7",
+		"react-native-safe-area-context": "^5.1.0",
+		"react-native-screens": "^4.5.0",
+		"react-native-tab-view": "^4.0.5",
+		"react-native-vector-icons": "^10.2.0",
 		"react-native-web": "^0.19.13",
+		"react-navigation": "^5.0.0",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0",
 		"recharts": "^2.15.0",
