--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
 		"react-navigation": "^5.0.0",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0",
+		"react-toastify": "^8.2.0",
 		"recharts": "^2.15.0",
 		"sweetalert2": "^11.15.10",
 		"tailwind-merge": "^2.6.0",
