--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"postcss": "^8.5.1",
 		"postcss-loader": "^8.1.1",
 		"prettier": "^2.5.1",
+		"react-intersection-observer": "^9.15.1",
 		"remote-origin-url": "^2.0.0",
 		"style-loader": "^3.3.4",
 		"tailwindcss": "^3.4.17",
