--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
 	"dependencies": {
 		"@cloudinary/react": "^1.13.1",
 		"@cloudinary/url-gen": "^1.21.0",
+		"@emailjs/browser": "^4.4.1",
 		"@headlessui/react": "^2.2.0",
 		"@heroicons/react": "^2.2.0",
 		"@radix-ui/react-avatar": "^1.1.2",
@@ -100,6 +101,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
+		"emailjs-com": "^3.2.0",
 		"lucide-react": "^0.471.2",
 		"lucide-react-native": "^0.473.0",
 		"moment": "^2.30.1",
