--- a/Pipfile
+++ b/Pipfile
@@ -18,7 +18,7 @@ gunicorn = "*"
 cloudinary = "*"
 flask-admin = "*"
 typing-extensions = "*"
-flask-jwt-extended = "*"
+flask-jwt-extended = "==4.6.0"
 wtforms = "==3.1.2"
 bcrypt = "*"
 flask-bcrypt = "*"
