--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
 		"@emailjs/browser": "^4.4.1",
 		"@headlessui/react": "^2.2.0",
 		"@heroicons/react": "^2.2.0",
+		"@paypal/react-paypal-js": "^8.8.2",
 		"@radix-ui/react-avatar": "^1.1.2",
 		"@radix-ui/react-checkbox": "^1.1.3",
 		"@radix-ui/react-dialog": "^1.1.4",
