--- a/package.json
+++ b/package.json
@@ -1,135 +1,138 @@
 {
 	"name": "react-hello-webapp",
 	"engines": {
-		"node": "16.x"
+	  "node": "18.x"
 	},
 	"version": "1.0.1",
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "webpack-dev-server --config webpack.dev.js --port 3000",
-		"build": "webpack --config webpack.prod.js"
+	  "start": "webpack-dev-server --config webpack.dev.js --port 3000",
+	  "build": "webpack --config webpack.prod.js"
 	},
 	"author": {
-		"name": "Alejandro Sanchez",
-		"url": "http://alesanchezr.com/"
+	  "name": "Alejandro Sanchez",
+	  "url": "http://alesanchezr.com/"
 	},
 	"contributors": [
-		{
-			"name": "Alejandro Sanchez",
-			"url": "http://alesanchezr.com/"
-		},
-		{
-			"name": "Ignacio Cordoba",
-			"url": "http://github.com/nachovz"
-		}
+	  {
+		"name": "Alejandro Sanchez",
+		"url": "http://alesanchezr.com/"
+	  },
+	  {
+		"name": "Ignacio Cordoba",
+		"url": "http://github.com/nachovz"
+	  }
 	],
 	"license": "ISC",
 	"devDependencies": {
-		"@babel/cli": "^7.26.4",
-		"@babel/core": "^7.26.9",
-		"@babel/plugin-proposal-class-properties": "^7.18.6",
-		"@babel/plugin-transform-runtime": "^7.26.9",
-		"@babel/preset-env": "^7.26.9",
-		"@babel/preset-react": "^7.26.3",
-		"@babel/runtime": "^7.26.9",
-		"@tailwindcss/postcss": "^4.0.6",
-		"autoprefixer": "^10.4.20",
-		"babel-eslint": "^10.1.0",
-		"babel-loader": "^9.2.1",
-		"babel-plugin-transform-class-properties": "^6.24.1",
-		"bc-console": "0.0.2",
-		"css-loader": "^7.1.2",
-		"dotenv-webpack": "^8.1.0",
-		"envfile": "^7.1.0",
-		"error-overlay-webpack-plugin": "^1.1.1",
-		"eslint": "^9.20.1",
-		"eslint-plugin-react": "^7.37.4",
-		"eslint-webpack-plugin": "^4.2.0",
-		"file-loader": "^6.2.0",
-		"gh-pages": "^6.3.0",
-		"html-loader": "^5.1.0",
-		"html-webpack-plugin": "^5.6.3",
-		"parse-github-url": "^1.0.3",
-		"postcss": "^8.5.2",
-		"postcss-loader": "^8.1.1",
-		"prettier": "^3.5.1",
-		"react-intersection-observer": "^9.15.1",
-		"remote-origin-url": "^2.0.0",
-		"style-loader": "^4.0.0",
-		"tailwindcss": "^4.0.6",
-		"webpack": "^5.98.0",
-		"webpack-cli": "^6.0.1",
-		"webpack-dev-server": "^5.2.0",
-		"webpack-merge": "^6.0.1"
+	  "@babel/cli": "^7.16.0",
+	  "@babel/core": "^7.16.0",
+	  "@babel/plugin-proposal-class-properties": "^7.16.0",
+	  "@babel/plugin-transform-runtime": "^7.16.4",
+	  "@babel/preset-env": "^7.16.4",
+	  "@babel/preset-react": "^7.16.0",
+	  "@babel/runtime": "^7.16.3",
+	  "@tailwindcss/postcss": "^4.0.6",
+	  "autoprefixer": "^10.4.20",
+	  "babel-eslint": "^10.1.0",
+	  "babel-loader": "^8.2.3",
+	  "babel-plugin-transform-class-properties": "^6.10.2",
+	  "bc-console": "0.0.2",
+	  "css-loader": "^6.11.0",
+	  "dotenv-webpack": "^7.0.3",
+	  "envfile": "^6.17.0",
+	  "error-overlay-webpack-plugin": "^1.0.0",
+	  "eslint": "^8.4.0",
+	  "eslint-plugin-react": "^7.27.1",
+	  "eslint-webpack-plugin": "^3.1.1",
+	  "file-loader": "^6.2.0",
+	  "gh-pages": "^6.3.0",
+	  "html-loader": "^3.0.1",
+	  "html-webpack-plugin": "^5.5.0",
+	  "parse-github-url": "^1.0.2",
+	  "postcss": "^8.5.1",
+	  "postcss-import": "^16.1.0",
+	  "postcss-loader": "^8.1.1",
+	  "postcss-nesting": "^13.0.1",
+	  "prettier": "^2.5.1",
+	  "react-intersection-observer": "^9.15.1",
+	  "remote-origin-url": "^2.0.0",
+	  "style-loader": "^3.3.4",
+	  "tailwindcss": "^3.4.17",
+	  "webpack": "^5.65.0",
+	  "webpack-cli": "^4.9.1",
+	  "webpack-dev-server": "^4.15.2",
+	  "webpack-merge": "^5.8.0"
 	},
 	"babel": {
-		"presets": [
-			"@babel/preset-env",
-			"@babel/preset-react"
-		],
-		"plugins": [
-			"@babel/plugin-proposal-class-properties",
-			[
-				"@babel/plugin-transform-runtime",
-				{
-					"regenerator": true
-				}
-			]
+	  "presets": [
+		"@babel/preset-env",
+		"@babel/preset-react"
+	  ],
+	  "plugins": [
+		"@babel/plugin-proposal-class-properties",
+		[
+		  "@babel/plugin-transform-runtime",
+		  {
+			"regenerator": true
+		  }
 		]
+	  ]
 	},
 	"dependencies": {
-		"@cloudinary/react": "^1.13.1",
-		"@cloudinary/url-gen": "^1.21.0",
-		"@emailjs/browser": "^4.4.1",
-		"@headlessui/react": "^2.2.0",
-		"@heroicons/react": "^2.2.0",
-		"@paypal/react-paypal-js": "^8.8.2",
-		"@radix-ui/react-avatar": "^1.1.3",
-		"@radix-ui/react-checkbox": "^1.1.4",
-		"@radix-ui/react-dialog": "^1.1.6",
-		"@radix-ui/react-dropdown-menu": "^2.1.6",
-		"@radix-ui/react-label": "^2.1.2",
-		"@radix-ui/react-popover": "^1.1.6",
-		"@radix-ui/react-select": "^2.1.6",
-		"@radix-ui/react-separator": "^1.1.2",
-		"@radix-ui/react-slot": "^1.1.2",
-		"@radix-ui/react-switch": "^1.1.3",
-		"@radix-ui/react-tabs": "^1.1.3",
-		"@radix-ui/react-toast": "^1.2.6",
-		"@react-navigation/material-top-tabs": "^7.1.0",
-		"@react-navigation/native": "^7.0.14",
-		"buffer": "^6.0.3",
-		"class-variance-authority": "^0.7.1",
-		"clsx": "^2.1.1",
-		"date-fns": "^4.1.0",
-		"emailjs-com": "^3.2.0",
-		"lucide-react": "^0.475.0",
-		"lucide-react-native": "^0.475.0",
-		"moment": "^2.30.1",
-		"next-themes": "^0.4.4",
-		"prop-types": "^15.8.1",
-		"react": "^18.0.0",
-		"react-big-calendar": "^1.17.1",
-		"react-day-picker": "^9.5.1",
-		"react-dom": "^18.0.0",
-		"react-native": "^0.77.1",
-		"react-native-feather": "^1.1.2",
-		"react-native-gesture-handler": "^2.23.1",
-		"react-native-get-random-values": "^1.11.0",
-		"react-native-reanimated": "^3.16.7",
-		"react-native-safe-area-context": "^5.2.0",
-		"react-native-screens": "^4.6.0",
-		"react-native-tab-view": "^4.0.5",
-		"react-native-vector-icons": "^10.2.0",
-		"react-native-web": "^0.19.13",
-		"react-navigation": "^5.0.0",
-		"react-polyfills": "0.0.1",
-		"react-router-dom": "^7.1.5",
-		"react-toastify": "^11.0.3",
-		"recharts": "^2.15.1",
-		"sweetalert2": "^11.16.1",
-		"tailwind-merge": "^3.0.1",
-		"tailwindcss-animate": "^1.0.7"
+	  "@cloudinary/react": "^1.13.1",
+	  "@cloudinary/url-gen": "^1.21.0",
+	  "@emailjs/browser": "^4.4.1",
+	  "@headlessui/react": "^1.7.15",
+	  "@heroicons/react": "^2.2.0",
+	  "@paypal/react-paypal-js": "^8.8.2",
+	  "@radix-ui/react-avatar": "^1.1.2",
+	  "@radix-ui/react-checkbox": "^1.1.3",
+	  "@radix-ui/react-dialog": "^1.1.4",
+	  "@radix-ui/react-dropdown-menu": "^2.1.4",
+	  "@radix-ui/react-label": "^2.1.1",
+	  "@radix-ui/react-popover": "^1.1.4",
+	  "@radix-ui/react-select": "^2.1.4",
+	  "@radix-ui/react-separator": "^1.1.1",
+	  "@radix-ui/react-slot": "^1.1.1",
+	  "@radix-ui/react-switch": "^1.1.2",
+	  "@radix-ui/react-tabs": "^1.1.2",
+	  "@radix-ui/react-toast": "^1.2.4",
+	  "@react-navigation/material-top-tabs": "^7.1.0",
+	  "@react-navigation/native": "^7.0.14",
+	  "buffer": "^6.0.3",
+	  "class-variance-authority": "^0.7.1",
+	  "clsx": "^2.1.1",
+	  "date-fns": "^4.1.0",
+	  "emailjs-com": "^3.2.0",
+	  "lucide-react": "^0.471.2",
+	  "lucide-react-native": "^0.473.0",
+	  "moment": "^2.30.1",
+	  "next-themes": "^0.4.4",
+	  "prop-types": "^15.8.1",
+	  "react": "^18.2.0",
+	  "react-big-calendar": "^1.17.1",
+	  "react-day-picker": "^9.5.0",
+	  "react-dom": "^18.2.0",
+	  "react-native": "^0.76.6",
+	  "react-native-feather": "^1.1.2",
+	  "react-native-gesture-handler": "^2.22.0",
+	  "react-native-get-random-values": "^1.11.0",
+	  "react-native-reanimated": "^3.16.7",
+	  "react-native-safe-area-context": "^5.1.0",
+	  "react-native-screens": "^4.5.0",
+	  "react-native-tab-view": "^4.0.5",
+	  "react-native-vector-icons": "^10.2.0",
+	  "react-native-web": "^0.19.13",
+	  "react-navigation": "^5.0.0",
+	  "react-polyfills": "0.0.1",
+	  "react-router-dom": "^6.3.0",
+	  "react-toastify": "^8.2.0",
+	  "recharts": "^2.15.0",
+	  "sweetalert2": "^11.6.13",
+	  "tailwind-merge": "^2.6.0",
+	  "tailwindcss-animate": "^1.0.7"
 	}
-}
+  }
+  
