--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ DEBUG=TRUE
 # Front-End Variables
 BASENAME=/
 #BACKEND_URL=
+# RESET_PASSWORD_URL=
 #CLOUDINARY_CLOUD_NAME=
 #CLOUDINARY_API_KEY=
 #CLOUDINARY_API_SECRET=
