--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,9 @@ BASENAME=/
 #CLOUDINARY_CLOUD_NAME=
 #CLOUDINARY_API_KEY=
 #CLOUDINARY_API_SECRET=
+#MAIL_SERVER=
+#MAIL_PORT=
+#MAIL_USE_TLS=
+#MAIL_USERNAME=
+#MAIL_PASSWORD=
+#MAIL_DEFAULT_SENDER=
