--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ BASENAME=/
 #CLOUDINARY_CLOUD_NAME=
 #CLOUDINARY_API_KEY=
 #CLOUDINARY_API_SECRET=
-#MAIL_SERVER=
+#MAIL_SERVER=smtp.gmail.com
 #MAIL_PORT=
 #MAIL_USE_TLS=
 #MAIL_USERNAME=
