--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ sqlalchemy = "==1.4.46"
 flask-sqlalchemy = "*"
 flask-migrate = "*"
 flask-swagger = "*"
-psycopg2-binary = "*"
+psycopg2-binary = ">=2.9.9"
 python-dotenv = "*"
 flask-cors = "*"
 gunicorn = "*"
@@ -24,9 +24,7 @@ bcrypt = "*"
 flask-bcrypt = "*"
 faker = "*"
 flask-mail = "*"
-datetime = "*"
 email-validator = "*"
-flash = "*"
 
 [requires]
 python_version = "3.13"
